--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -79,13 +79,21 @@ spring:
       hibernate.connection.provider_disables_autocommit: true
       hibernate.cache.use_second_level_cache: false
       hibernate.cache.use_query_cache: false
-      hibernate.generate_statistics: false
+
       # modify batch size as necessary
-      hibernate.jdbc.batch_size: 25
-      hibernate.order_inserts: true
-      hibernate.order_updates: true
+
       hibernate.query.fail_on_pagination_over_collection_fetch: true
       hibernate.query.in_clause_parameter_padding: true
+
+      hibernate.show_sql: true
+      hibernate.formate_sql: true
+      hibernate.generate_statistics: true
+      hibernate.jdbc.batch_size: 100
+      hibernate.jdbc.fetch_size: 100
+      hibernate.order_inserts: true
+      hibernate.order_updates: true
+      hibernate.batch_versioned_data: true
+
     hibernate:
       ddl-auto: none
       naming:
@@ -114,6 +122,8 @@ spring:
   output:
     ansi:
       console-available: true
+  flyway:
+    baselineOnMigrate: true
 
 server:
   servlet:
@@ -166,3 +176,6 @@ jhipster:
 # ===================================================================
 
 # application:
+flyway:
+  locations: db/migration/postgresql
+  schemas: public
